ms5/ms5/errors.txt
In file included from Ticket.h:10:0,
                 from Patient.h:9,
                 from Patient.cpp:9:
Time.h:25:1: error: expected unqualified-id before ‘=’ token
 =    std::istream& operator>>(std::istream&, Time&);
 ^
In file included from Ticket.h:10:0,
                 from Ticket.cpp:7:
Time.h:25:1: error: expected unqualified-id before ‘=’ token
 =    std::istream& operator>>(std::istream&, Time&);
 ^
Ticket.cpp: In member function ‘virtual std::istream& sdds::Ticket::csvRead(std::istream&)’:
Ticket.cpp:27:22: error: cannot bind ‘std::istream {aka std::basic_istream<char>}’ lvalue to ‘std::basic_istream<char>&&’
       return istr >> m_time;
                      ^
In file included from /usr/include/c++/4.8.2/iostream:40:0,
                 from Time.h:10,
                 from Ticket.h:10,
                 from Ticket.cpp:7:
/usr/include/c++/4.8.2/istream:872:5: error:   initializing argument 1 of ‘std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&&, _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Tp = sdds::Time]’
     operator>>(basic_istream<_CharT, _Traits>&& __is, _Tp& __x)
     ^
Ticket.cpp:28:4: warning: control reaches end of non-void function [-Wreturn-type]
    }
    ^
In file included from Ticket.h:10:0,
                 from Patient.h:9,
                 from TriagePatient.h:10,
                 from TriagePatient.cpp:10:
Time.h:25:1: error: expected unqualified-id before ‘=’ token
 =    std::istream& operator>>(std::istream&, Time&);
 ^
In file included from Ticket.h:10:0,
                 from Patient.h:9,
                 from CovidPatient.h:9,
                 from CovidPatient.cpp:7:
Time.h:25:1: error: expected unqualified-id before ‘=’ token
 =    std::istream& operator>>(std::istream&, Time&);
 ^
In file included from Ticket.h:10:0,
                 from Patient.h:9,
                 from PreTriage.h:9,
                 from fpTester_prof.cpp:12:
Time.h:25:1: error: expected unqualified-id before ‘=’ token
 =    std::istream& operator>>(std::istream&, Time&);
 ^
In file included from Menu.cpp:12:0:
Time.h:25:1: error: expected unqualified-id before ‘=’ token
 =    std::istream& operator>>(std::istream&, Time&);
 ^
In file included from Ticket.h:10:0,
                 from Patient.h:9,
                 from PreTriage.h:9,
                 from PreTriage.cpp:11:
Time.h:25:1: error: expected unqualified-id before ‘=’ token
 =    std::istream& operator>>(std::istream&, Time&);
 ^
PreTriage.cpp: In member function ‘void sdds::PreTriage::load()’:
PreTriage.cpp:126:14: error: cannot bind ‘std::basic_istream<char>’ lvalue to ‘std::basic_istream<char>&&’
    fileIn >> m_averCovidWait;
              ^
In file included from /usr/include/c++/4.8.2/fstream:38:0,
                 from PreTriage.cpp:8:
/usr/include/c++/4.8.2/istream:872:5: error:   initializing argument 1 of ‘std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&&, _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Tp = sdds::Time]’
     operator>>(basic_istream<_CharT, _Traits>&& __is, _Tp& __x)
     ^
PreTriage.cpp:128:14: error: cannot bind ‘std::basic_istream<char>’ lvalue to ‘std::basic_istream<char>&&’
    fileIn >> m_averTriageWait;
              ^
In file included from /usr/include/c++/4.8.2/fstream:38:0,
                 from PreTriage.cpp:8:
/usr/include/c++/4.8.2/istream:872:5: error:   initializing argument 1 of ‘std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&&, _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Tp = sdds::Time]’
     operator>>(basic_istream<_CharT, _Traits>&& __is, _Tp& __x)
     ^
In file included from Time.cpp:10:0:
Time.h:25:1: error: expected unqualified-id before ‘=’ token
 =    std::istream& operator>>(std::istream&, Time&);
 ^
In file included from utils.cpp:13:0:
Time.h:25:1: error: expected unqualified-id before ‘=’ token
 =    std::istream& operator>>(std::istream&, Time&);
 ^
utils.cpp: In function ‘int sdds::getTime()’:
utils.cpp:28:24: error: cannot bind ‘std::istream {aka std::basic_istream<char>}’ lvalue to ‘std::basic_istream<char>&&’
                 cin >> t;
                        ^
In file included from /usr/include/c++/4.8.2/iostream:40:0,
                 from utils.cpp:9:
/usr/include/c++/4.8.2/istream:872:5: error:   initializing argument 1 of ‘std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&&, _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Tp = sdds::Time]’
     operator>>(basic_istream<_CharT, _Traits>&& __is, _Tp& __x)
     ^
